...
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.251" />

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="249dp"
            android:layout_height="20dp"
            android:layout_marginBottom="8dp"


            android:layout_marginEnd="8dp"
...
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/manualLoginButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="20dp"
...
